--- a/scorebook/app/views/high_scores/index.html.erb
+++ b/scorebook/app/views/high_scores/index.html.erb
@@ -17,6 +17,7 @@
 	<td><%= high_score.game =%></td>
 	<td><%= high_score.score =%></td>
   <td><%= link_to 'Show', high_score %></td>
+  <td><%= link_to 'Edit', edit_high_score_path(high_score) %></td>
       </tr>
     <% end %>
   </tbody>
