--- a/scorebook/app/views/high_scores/index.html.erb
+++ b/scorebook/app/views/high_scores/index.html.erb
@@ -18,6 +18,7 @@
 	<td><%= high_score.score =%></td>
   <td><%= link_to 'Show', high_score %></td>
   <td><%= link_to 'Edit', edit_high_score_path(high_score) %></td>
+  <td><%= link_to 'Destroy', high_score, method: :delete, data: { confirm: "Are you sure you want to delete #{high_score.user}'score?" } %></td>
       </tr>
     <% end %>
   </tbody>
