--- a/doi_server/app/views/dois/_form.html.erb
+++ b/doi_server/app/views/dois/_form.html.erb
@@ -12,13 +12,25 @@
   <% end %>
 
   <div class="field">
+    <% new_doi = Digest::MD5.hexdigest(Time.now.to_s) %>
     <%= f.label :doi %><br>
-    <%= f.text_field :doi %>
+    <strong><%= new_doi %></strong>
+    <%= f.hidden_field :doi, :value => new_doi %>
+  </div>
+  <div class="field">
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
     <%= f.text_field :description %>
   </div>
+  <%= f.fields_for :urls do |urls_form| %>
+    <div class="field">
+      <%= urls_form.label :url %><br>
+      <%= urls_form.text_field :url %>
+    </div>
+  <% end %>
   <div class="actions">
     <%= f.submit %>
   </div>
