--- a/doi_server/app/views/dois/show.html.erb
+++ b/doi_server/app/views/dois/show.html.erb
@@ -1,14 +1,40 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Doi:</strong>
-  <%= @doi.doi %>
-</p>
+<table>
+  <tr>
+    <td><strong>Doi:</strong></td>
+    <td><%= @doi.doi %></td>
+  </tr>
+  <tr>
+    <td><strong>Name:</strong></td>
+    <td><%= @doi.name %></td>
+  </tr>
+  <tr>
+    <td><strong>Description: </strong></td>
+    <td><%= @doi.description %></td>
+  </tr>
+</table>
+<table>
+  <thead>
+    <tr>
+      <th>URL History: </th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @doi.urls.each do |url| %>
+      <% if !url.new_record? %>
+        <tr>
+          <td><%= url.url %></td>
+        </tr>
+      <% end %>
+    <% end %>
+  </tbody>
+</table>
+<br><br>
+<h3>Update the URL</h3>
+<%= render 'urls/form' %>
+<br><br>
 
-<p>
-  <strong>Description:</strong>
-  <%= @doi.description %>
-</p>
 
 <%= link_to 'Edit', edit_doi_path(@doi) %> |
 <%= link_to 'Back', dois_path %>
