--- a/doi_server/app/views/home/index.html.erb
+++ b/doi_server/app/views/home/index.html.erb
@@ -10,5 +10,5 @@
 <br><br>
 
 <div id='home_new'>
-  <%= link_to 'Create a new DOI', controller: "dois", action: "new" %>
+  <%= link_to 'Create a new DOI', controller: "dois", action: "new" %> | <%= link_to 'View All DOIs', dois_path %>
 </div>
