Query works for both name and DOI, but it wont print the most recent URL for some reason.

--- a/doi_server/app/views/dois/show.html.erb
+++ b/doi_server/app/views/dois/show.html.erb
@@ -36,5 +36,5 @@
 <br><br>
 
 
-<%= link_to 'Edit', edit_doi_path(@doi) %> |
+<%= link_to 'New Search', root_path %> |
 <%= link_to 'Back', dois_path %>
