--- a/doi_server/app/views/home/index.html.erb
+++ b/doi_server/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div id='home_query'>
   <h1>DOI-to-Url Lookup Utility</h1>
   <%= form_tag(query_path, method: "get") do %>
-    <%= label_tag(:query, "DOI: ") %>
+    <%= label_tag(:query, "DOI or Name: ") %>
     <%= text_field_tag(:query) %>
     <%= submit_tag("Lookup") %>
   <% end %>
