Img app install sequence: scaffold Image filename:string public:boolean user:references, scaffold Tag msg:string image:references, model Imageuser image:references user:references, devise:install, routes, devise user, rake db:migrate.  It compiles and rails s servers a page.

--- a/img/app/views/images/index.html.erb
+++ b/img/app/views/images/index.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <td><%= image.filename %></td>
         <td><%= image.public %></td>
-        <td><%= image.user_id %></td>
+        <td><%= image.user %></td>
         <td><%= link_to 'Show', image %></td>
         <td><%= link_to 'Edit', edit_image_path(image) %></td>
         <td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
