--- a/img/app/views/tags/_form.html.erb
+++ b/img/app/views/tags/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :tag %><br>
-    <%= f.text_field :tag %>
+    <%= f.label :msg %><br>
+    <%= f.text_field :msg %>
   </div>
   <div class="field">
-    <%= f.label :img_id %><br>
-    <%= f.text_field :img_id %>
+    <%= f.label :image_id %><br>
+    <%= f.text_field :image_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
