--- a/img/app/views/tags/show.html.erb
+++ b/img/app/views/tags/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Tag:</strong>
-  <%= @tag.tag %>
+  <strong>Msg:</strong>
+  <%= @tag.msg %>
 </p>
 
 <p>
-  <strong>Img:</strong>
-  <%= @tag.img_id %>
+  <strong>Image:</strong>
+  <%= @tag.image %>
 </p>
 
 <%= link_to 'Edit', edit_tag_path(@tag) %> |
