--- a/img/app/views/tags/index.html.erb
+++ b/img/app/views/tags/index.html.erb
@@ -3,8 +3,8 @@
 <table>
   <thead>
     <tr>
-      <th>Tag</th>
-      <th>Img</th>
+      <th>Msg</th>
+      <th>Image</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,8 +12,8 @@
   <tbody>
     <% @tags.each do |tag| %>
       <tr>
-        <td><%= tag.tag %></td>
-        <td><%= tag.img_id %></td>
+        <td><%= tag.msg %></td>
+        <td><%= tag.image %></td>
         <td><%= link_to 'Show', tag %></td>
         <td><%= link_to 'Edit', edit_tag_path(tag) %></td>
         <td><%= link_to 'Destroy', tag, method: :delete, data: { confirm: 'Are you sure?' } %></td>
