--- a/img/app/views/images/_form.html.erb
+++ b/img/app/views/images/_form.html.erb
@@ -11,6 +11,8 @@
     </div>
   <% end %>
 
+  <%= f.file_field :uploaded_file %> 
+
   <div class="field">
     <%= f.label :filename %><br>
     <%= f.text_field :filename %>
