--- a/img/app/views/images/index.html.erb
+++ b/img/app/views/images/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Listing images</h1>
 
+<div id="public_pics">
+<h1>Public Pictures</h1>
 <table>
   <thead>
     <tr>
@@ -9,20 +11,54 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
-    <% @images.each do |image| %>
+  <% @pub_images = Image.where(:public => TRUE) %>
+    <% @pub_images.each do |image| %>
       <tr>
-        <td><%= image.filename %></td>
+        <td><%= image_tag root_url + "/images/" + image.filename, size: "100x100", alt: image.filename %></td>
         <td><%= image.public %></td>
-        <td><%= image.user %></td>
+        <td><%= image.user.email %></td>
+        <td><%= link_to 'Show', image %></td>
+        <% if( current_user ) %>
+        <% if( image.user == current_user.id) %>
+          <td><%= link_to 'Edit', edit_image_path(image) %></td>
+          <td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+        <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+</div>
+
+<% if( current_user ) %>
+<div id="private_pics">
+<h1>Private Pictures</h1>
+<table>
+  <thead>
+    <tr>
+      <th>Filename</th>
+      <th>Public</th>
+      <th>User</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+  <% @priv_images = Image.where(['public = ? AND user_id = ?', FALSE, current_user.id]) %>
+    <% @priv_images.each do |image| %>
+      <tr>
+        <td><%= image_tag root_url + "/images/" + image.filename, size: "100x100", alt: image.filename %></td>
+        <td><%= image.public %></td>
+        <td><%= image.user.email %></td>
         <td><%= link_to 'Show', image %></td>
         <td><%= link_to 'Edit', edit_image_path(image) %></td>
         <td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+    <% end %>
   </tbody>
 </table>
+</div>
 
 <br>
 
