--- a/img/app/views/images/show.html.erb
+++ b/img/app/views/images/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <p>
   <strong>Filename:</strong>
@@ -12,8 +11,12 @@
 
 <p>
   <strong>User:</strong>
-  <%= @image.user %>
+  <%= @image.user.email %>
 </p>
 
+<%= image_tag root_url + "/images/" + @image.filename, size: "100x100", alt: @image.filename %>
+
+<% if @image.user_id == current_user.id %>
 <%= link_to 'Edit', edit_image_path(@image) %> |
 <%= link_to 'Back', images_path %>
+<% end %>
