--- a/img/app/views/images/index.html.erb
+++ b/img/app/views/images/index.html.erb
@@ -3,30 +3,26 @@
 <div id="public_pics">
 <h1>Public Pictures</h1>
 <table>
-  <thead>
-    <tr>
-      <th>Filename</th>
-      <th>Public</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
   <tbody>
-  <% @pub_images = Image.where(:public => TRUE) %>
+    <tr>
+    <% @count = 0 %>
+    <% @pub_images = Image.where(:public => TRUE) %>
     <% @pub_images.each do |image| %>
-      <tr>
-        <td><%= image_tag root_url + "/images/" + image.filename, size: "100x100", alt: image.filename %></td>
-        <td><%= image.public %></td>
-        <td><%= image.user.email %></td>
-        <td><%= link_to 'Show', image %></td>
+        <td><%= image_tag root_url + "/images/" + image.filename, size: "100x100", alt: image.filename %><br>
         <% if( current_user ) %>
-        <% if( image.user == current_user.id) %>
-          <td><%= link_to 'Edit', edit_image_path(image) %></td>
-          <td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% if( image.user.id == current_user.id) %>
+            <%= link_to 'Show', image %>
+            <%= link_to 'Edit', edit_image_path(image) %>
+            <%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
         <% end %>
+
+        <% @count += 1 %>
+        <% if( @count % 6 == 0 ) %>
+          </tr><tr>
         <% end %>
-      </tr>
-    <% end %>
+      <% end %>
+    </tr>
   </tbody>
 </table>
 </div>
@@ -35,31 +31,27 @@
 <div id="private_pics">
 <h1>Private Pictures</h1>
 <table>
-  <thead>
-    <tr>
-      <th>Filename</th>
-      <th>Public</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
   <tbody>
+  <tr>
+  <% @count = 0 %>
   <% @priv_images = Image.where(['public = ? AND user_id = ?', FALSE, current_user.id]) %>
-    <% @priv_images.each do |image| %>
-      <tr>
-        <td><%= image_tag root_url + "/images/" + image.filename, size: "100x100", alt: image.filename %></td>
-        <td><%= image.public %></td>
-        <td><%= image.user.email %></td>
-        <td><%= link_to 'Show', image %></td>
-        <td><%= link_to 'Edit', edit_image_path(image) %></td>
-        <td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+  <% @priv_images.each do |image| %>
+    <td><%= image_tag root_url + "/images/" + image.filename, size: "100x100", alt: image.filename %><br>
+    <%= link_to 'Show', image %>
+    <%= link_to 'Edit', edit_image_path(image) %>
+    <%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% @count += 1 %>
+    <% if( @count % 6 == 0 ) %>
+      </tr><tr>
     <% end %>
-    <% end %>
+  <% end %>
+  </tr>
   </tbody>
 </table>
 </div>
+<% end %>
 
 <br>
-
-<%= link_to 'New Image', new_image_path %>
+<% if( current_user ) %>
+  <%= link_to 'New Image', new_image_path %>
+<% end %>
