--- a/img/app/views/layouts/application.html.erb
+++ b/img/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
 <body>
 <div id="user_nav">
   <% if user_signed_in? %>
-  Signed in as <%= current_user.email %>. Not you?
+  <b>Signed in as</b></h4><%= current_user.name %>.</h4><b>Not you?</b>
     <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+    <hr><%= current_user.name %> | <%= current_user.id %> | <%= current_user.email %><hr>
   <% else %>
     <%= link_to "Sign up", new_user_registration_path %> or
     <%= link_to "Sign in", new_user_session_path %>
