--- a/img/app/views/tags/_form.html.erb
+++ b/img/app/views/tags/_form.html.erb
@@ -14,6 +14,7 @@
   <div class="field">
     <%= f.label "Tag" %><br>
     <%= f.text_field :msg, :required => true %>
+    <%= hidden_field_tag :image_id, @tag.image_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
